# elAPI_Plugins

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  Doxyfile  LICENSE  README.md  app.icns  mypy.ini  package_mac.sh  patch_ressources.py  pyproject.toml  requirements.txt  run_export.bat  run_export.command  run_gui.bat  run_gui.command  run_gui_hidden.vbs
config/: logging_config.json  res_importer_config.json
gui/: gui.py
gui/static/: style.css
gui/templates/: index.html
plugins/experiments/: export.py
plugins/migration/: labfolder.py
plugins/resources/: create.py  create_resources.py  export.py  export_gui.py  exports_resources.py  patch.py  patch_resources.py  resource_utils.py
plugins/ressources/: patch_ressources.py  ressource_utils.py
src/elabftw_client/: __init__.py
src/elabftw_client/factories/: __init__.py  exporter_factory.py  importer_factory.py
src/elabftw_client/services/exporters/: __init__.py  base_exporter.py  experiments_exporter.py  resources_exporter.py
src/elabftw_client/services/importers/: __init__.py  base_importer.py  experiments_importer.py  resources_importer.py
src/elabftw_client/utils/: __init__.py  csv_tools.py  endpoints.py  paths.py  validators.py
src/factories/: __init__.py  exporter_factory.py  importer_factory.py
src/services/exporters/: __init__.py  base_exporter.py  experiments_exporter.py  resources_exporter.py
src/services/importers/: __init__.py  base_importer.py  experiments_importer.py  resources_importer.py
src/updater/: __init__.py  updater.py
src/utils/: __init__.py  common.py  content_extraction.py  csv_tools.py  endpoints.py  logging_config.py  paths.py  validators.py
tests/: __init__.py  conftest.py  export_xlsx.ipynb
tests/gui/: test_gui.py
tests/labfolder_tests/: test_client.py
tests/src/: test_common.py  test_csv_tools.py  test_endpoints.py  test_exporters.py  test_factories.py  test_importers.py  test_logging_config.py  test_updater.py  test_validators.py
tests/src/services/exporters/: test_experiments_exporter.py  test_resources_exporter.py
tests/src/services/importers/: test_base_importer.py  test_experiments_importer.py  test_resources_importer.py
utils/: content_extraction.py  endpoints.py  paths.py  resource_utils.py
