[project]
# this is the name of the distribution you’ll pip-install
name = "elapi-plugins"
version = "0.1.0"
description = """
Plugin tools for eLabFTW and Labfolder migration,
developed as part of the INF Project of CRC 1638 at Heidelberg University
"""
authors = [
  { name = "Dionysios Antypas", email = "dionysios.antypas@bzh.uni-heidelberg.de" }
]
readme = "README.md"
license = { text = "AGPLv3" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dantypas3/elAPI_Plugins"

[tool.setuptools]
# tells setuptools “my packages live under src/”
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# by default this will find both labfolder_migration and elabftw_client

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
