[project]
name = "elapi-plugins"
version = "0.1.0"
description = "Plugin tools for eLabFTW and Labfolder migration, developed as part of the INF Project of CRC 1638 at Heidelberg University"

authors = [
    { name = "Dionysios Antypas", email = "dionysios.antypas@bzh.uni-heidelberg.de" }
]
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"

dependencies = [
    "flask>=3.1.1",
    "werkzeug>=3.1.3",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "elapi>=2.3.3",
    "openpyxl>=3.0.0",
    "responses>=0.25.8",
]

[project.optional-dependencies]
notebook = [
    "notebook>=7.4.7",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
]
types = [
    "pandas-stubs>=2.3.3.251219",
]
dev = [
    "deptry>=0.24.0",
    "pip-check-reqs>=2.5.5",
    "pip-chill>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/dantypas3/elAPI_Plugins"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------
# Ruff (lint + optional format)
# -------------------------

[tool.ruff]
# Keep this consistent with Prettier’s printWidth and any editor settings.
line-length = 89
target-version = "py311"

[tool.ruff.lint]
# A solid default set for most projects.
select = ["E", "F", "I", "B", "UP"]
# Example ignores (adjust to your preferences / team conventions):
ignore = []

[tool.ruff.format]
# Keep formatter defaults unless you have a strong reason.
quote-style = "double"
indent-style = "space"
